[project]
name = "nemo-code-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "megatron-core>=0.18.0",
    "nemo-toolkit>=2.7.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "ruff>=0.15.20",
]
